[gd_scene load_steps=6 format=3 uid="uid://2hdguwh12h7q"]

[ext_resource type="FontFile" uid="uid://vwxk44yn47n4" path="res://Fonts/Gamer.ttf" id="1_4llke"]
[ext_resource type="Script" uid="uid://6nunqmb7fs32" path="res://Scenes/Start/erease_save_confirmation.gd" id="1_225r1"]
[ext_resource type="Theme" uid="uid://cljm6gjy11lfv" path="res://Themes/StartButton.tres" id="2_225r1"]
[ext_resource type="AudioStream" uid="uid://cybahn7vntkbm" path="res://Sounds/squeak.wav" id="4_kw5vv"]
[ext_resource type="AudioStream" uid="uid://bdq8wo4uispks" path="res://Sounds/select.wav" id="5_h23ao"]

[node name="EreaseSaveConfirmation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_225r1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0156863, 0.0156863, 0.0156863, 1)

[node name="ConfirmationWarning" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = -79.0
offset_right = 527.0
offset_bottom = -38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_4llke")
theme_override_font_sizes/font_size = 50
text = "Seu save atual será deletado, deseja continuar mesmo assim?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -24.0
offset_right = 136.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Yes" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_225r1")
text = "Sim"

[node name="No" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_225r1")
text = "Não"

[node name="SqueakSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kw5vv")

[node name="SelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_h23ao")

[connection signal="pressed" from="HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="HBoxContainer/No" to="." method="_on_no_pressed"]
